--- a/spock-specs/specs.gradle
+++ b/spock-specs/specs.gradle
@@ -10,7 +10,8 @@ configurations {
 
 dependencies {
   testCompile project(":spock-core")
-  testCompile libs.groovySql  //for groovy.sql.Sql
+  testCompile libs.groovyConsole  //for AstNodeToScriptAdapter
+  testCompile libs.groovySql      //for groovy.sql.Sql
   testCompile(libs.groovyTest) {  //for groovy.test.NotYetImplemented
     exclude group: 'junit'
   }
