Optimize incremental build

--- a/spock-spring/boot-test/boot-test.gradle
+++ b/spock-spring/boot-test/boot-test.gradle
@@ -35,3 +35,7 @@ repositories {
   mavenCentral()
 }
 
+// Disable non-cachable tasks, that are irrelevant for running tests
+tasks.findByName('findMainClass').onlyIf { false }
+tasks.findByName('bootRepackage').onlyIf { false }
+
