--- a/spock-specs/specs.gradle
+++ b/spock-specs/specs.gradle
@@ -10,6 +10,8 @@ configurations {
 }
 
 dependencies {
+  compile libs.groovyJmx
+
   testCompile project(":spock-core")
   testCompile libs.groovySql  //for groovy.sql.Sql
   testCompile(libs.groovyTest) {  //for groovy.test.NotYetImplemented
@@ -47,8 +49,10 @@ task groovyConsole(type: JavaExec) {
 
 compileTestGroovy {
   def compileTestGroovyExec = "$buildDir/jacoco/compileTestGroovy.exec"
-  groovyOptions.fork jvmArgs: ["-javaagent:${configurations.jacocoAgentRuntime.asPath}=destfile=$compileTestGroovyExec,dumponexit=true,includes=org.spockframework.*".toString()]
+  groovyOptions.fork jvmArgs: ["-javaagent:${configurations.jacocoAgentRuntime.asPath}=destfile=$compileTestGroovyExec,dumponexit=false,jmx=true,includes=org.spockframework.*".toString()]
+  outputs.file(compileTestGroovyExec)
   doFirst {
+    // delete first as jacoco appends
     file(compileTestGroovyExec).delete()
   }
 }
