--- a/spock-spring/boot-test/boot-test.gradle
+++ b/spock-spring/boot-test/boot-test.gradle
@@ -36,6 +36,5 @@ repositories {
 }
 
 // Disable non-cachable tasks, that are irrelevant for running tests
-tasks.findByName('findMainClass').onlyIf { false }
-tasks.findByName('bootRepackage').onlyIf { false }
-
+tasks.named('findMainClass').configure { enabled = false }
+tasks.named('bootRepackage').configure { enabled = false }
