--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ ext {
   milestone = 0
   variants = [2.5, 3.0]
   variant = System.getProperty("variant") as BigDecimal ?: variants.first()
+  buildScan.tag "groovy-$variant"
   if (variant == 2.5) {
       groovyVersion = "2.5.12"
       minGroovyVersion = "2.5.0"
