Optimize gradle enterprise usage (#1296)
* Optimize incremental build

* Add runtimeClasspath normalization

* Update to gradle 6.8.3

* Use CommandLineArgumentProvider in SpockBasePlugin with relative path sensitivity for spockConfig in tests

Co-authored-by: Nelson Osacky <nelson@osacky.com>

--- a/spock-core/core.gradle
+++ b/spock-core/core.gradle
@@ -103,9 +103,19 @@ tasks.register('osgiProperties', WriteProperties) {
 // that its metadata is valid. If the metadata is invalid this task will
 // fail.
 tasks.register('verifyOSGi', Resolve) {
+
   dependsOn(osgiProperties)
   setBndrun(osgiPropertiesFile)
   reportOptional = false
+
+  // workaround until https://github.com/bndtools/bnd/issues/4577 is fixed
+  def taskMarker = file("$buildDir/verifyOSGi.marker")
+  writeOnChanges = false
+  outputs.cacheIf { true }
+  outputs.file(taskMarker).withPropertyName("taskMarker")
+  doLast {
+    taskMarker.text = "done"
+  }
 }
 
 tasks.check {
