--- a/settings.gradle
+++ b/settings.gradle
@@ -57,20 +57,19 @@ gradleEnterprise {
   }
 }
 
-// Disabled to gather baseline data
-//buildCache {
-//  local {
-//    enabled = !isCiServer
-//  }
-//  remote(HttpBuildCache) {
-//    url = uri("$gradleEnterpriseServer/cache/")
-//    push = isCiServer && spockBuildCacheUsername && spockBuildCachePassword
-//    credentials {
-//      username = spockBuildCacheUsername ?: null
-//      password = spockBuildCachePassword ?: null
-//    }
-//  }
-//}
+buildCache {
+  local {
+    enabled = !isCiServer
+  }
+  remote(HttpBuildCache) {
+    url = uri("$gradleEnterpriseServer/cache/")
+    push = isCiServer && spockBuildCacheUsername && spockBuildCachePassword
+    credentials {
+      username = spockBuildCacheUsername ?: null
+      password = spockBuildCachePassword ?: null
+    }
+  }
+}
 
 include "spock-bom"
 include "spock-core"
