--- a/spock-specs/specs.gradle
+++ b/spock-specs/specs.gradle
@@ -49,10 +49,6 @@ task groovyConsole(type: JavaExec) {
 
 compileTestGroovy {
   def compileTestGroovyExec = "$buildDir/jacoco/compileTestGroovy.exec"
-  groovyOptions.fork jvmArgs: ["-javaagent:${configurations.jacocoAgentRuntime.asPath}=destfile=$compileTestGroovyExec,dumponexit=false,jmx=true,includes=org.spockframework.*".toString()]
+  groovyOptions.fork jvmArgs: ["-javaagent:${configurations.jacocoAgentRuntime.asPath}=destfile=$compileTestGroovyExec,dumponexit=false,append=false,jmx=true,includes=org.spockframework.*".toString()]
   outputs.file(compileTestGroovyExec)
-  doFirst {
-    // delete first as jacoco appends
-    file(compileTestGroovyExec).delete()
-  }
 }
