Add compiler coverage for Spock's AST transformations (#1278)

--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,7 @@ ext {
     groovy              : groovyDependencies,
     groovySql           : [group: 'org.codehaus.groovy', name: 'groovy-sql', version: groovyVersion], //for some Spring and Unitils tests
     groovyTest          : [group: 'org.codehaus.groovy', name: 'groovy-test', version: groovyVersion], //for @NotYetImplemented
+    groovyJmx           : [group: 'org.codehaus.groovy', name: 'groovy-jmx', version: groovyVersion],  //for triggering jacoco dump via jmx
     h2database          : [group: 'com.h2database', name: 'h2', version: '1.4.200'],
     hamcrest            : [group: 'org.hamcrest', name: 'hamcrest', version: '2.2'],
     jaxb                : [group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'],
@@ -65,8 +66,8 @@ ext {
     junitPlatformTestkit: [group: 'org.junit.platform', name: 'junit-platform-testkit'],
     junitPlatformConsole: [group: 'org.junit.platform', name: 'junit-platform-console'],
     log4j               : [group: 'log4j', name: 'log4j', version: '1.2.17'],
-    objenesis           : [group: 'org.objenesis', name: 'objenesis', version: '3.1']
-
+    objenesis           : [group: 'org.objenesis', name: 'objenesis', version: '3.1'],
+    jacocoAgent         : [group: 'org.jacoco', name: 'org.jacoco.agent', version: '0.8.6', classifier: 'runtime']
   ]
 }
 
@@ -193,7 +194,7 @@ subprojects {
   }
 
   jacoco {
-    toolVersion = '0.8.6'
+    toolVersion = libs.jacocoAgent.version
   }
 }
 
@@ -230,6 +231,7 @@ task codeCoverageReport (type: JacocoReport, group: 'Coverage reports') {
   additionalSourceDirs.from(reportingProjects.sourceSets.main.allSource.srcDirs)
   additionalClassDirs.from(reportingProjects.sourceSets.main.output)
   executionData.from(files(reportingProjects.jacocoTestReport.executionData).filter { it.exists() })
+  executionData.from(file('spock-specs/build/jacoco/compileTestGroovy.exec'))
 
   reports {
     html.enabled = true
