--- a/.github/workflows/branches-and-prs.yml
+++ b/.github/workflows/branches-and-prs.yml
@@ -53,6 +53,11 @@ jobs:
         run: |
           ./gradlew --version
       - name: 'Build Spock'
+        # secrets are not injected for pull requests
+        env:
+          ORG_GRADLE_PROJECT_spockBuildCacheUsername: ${{ secrets.SPOCK_BUILD_CACHE_USERNAME }}
+          ORG_GRADLE_PROJECT_spockBuildCachePassword: ${{ secrets.SPOCK_BUILD_CACHE_PASSWORD }}
+          GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
         run: |
           ./gradlew --no-parallel --scan --stacktrace ghActionsBuild "-Dvariant=${{ matrix.variant }}"
       - name: 'Stop Daemon'
