--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,7 @@ import com.gradle.enterprise.gradleplugin.internal.extension.BuildScanExtensionW
 pluginManagement {
   plugins {
     id "com.gradle.enterprise" version "3.6"
-    id "com.gradle.common-custom-user-data-gradle-plugin" version "1.1.2"
+    id "com.gradle.common-custom-user-data-gradle-plugin" version "1.2.1"
     id "org.asciidoctor.jvm.convert" version "3.2.0"
     id "net.nemerosa.versioning" version "2.13.1"
     id "de.marcphilipp.nexus-publish" version "0.4.0"
@@ -23,7 +23,7 @@ def spockBuildCacheUsername = ext.has('spockBuildCacheUsername') ? ext['spockBui
 def spockBuildCachePassword = ext.has('spockBuildCachePassword') ? ext['spockBuildCachePassword'] : null
 
 def accessKeysAreMissing() {
-  return !System.env['GRADLE_ENTERPRISE_ACCESS_KEY']?.trim()
+  return !(System.env['GRADLE_ENTERPRISE_ACCESS_KEY']?.trim())
 }
 
 gradleEnterprise {
