Improve build-caching ...
Use doFirst workaround for build-caching in compileTestGroovy
Fix runtimeClasspath normalization only ignore Build-Revision attribute

--- a/build.gradle
+++ b/build.gradle
@@ -109,7 +109,7 @@ allprojects {
   normalization {
     runtimeClasspath {
       metaInf {
-        ignoreManifest()
+        ignoreAttribute("Build-Revision")
       }
     }
   }
