--- a/spock-specs/specs.gradle
+++ b/spock-specs/specs.gradle
@@ -49,9 +49,12 @@ task groovyConsole(type: JavaExec) {
 
 compileTestGroovy {
   def compileTestGroovyExec = "$buildDir/jacoco/compileTestGroovy.exec"
-  groovyOptions.fork jvmArgs: [
-    "-javaagent:${configurations.jacocoAgentRuntime.asPath}=destfile=$compileTestGroovyExec,dumponexit=false,append=false,jmx=true,includes=org.spockframework.*".toString(),
-    "-DJacocoAstDumpTrigger=true"
-  ]
+  doFirst {
+    // Workaround in doFirst as gradle currently does not provide another way to exclude jvmArgs from the compiler fork
+    groovyOptions.fork jvmArgs: [
+      "-javaagent:${configurations.jacocoAgentRuntime.asPath}=destfile=$compileTestGroovyExec,dumponexit=false,append=false,jmx=true,includes=org.spockframework.*".toString(),
+      "-DJacocoAstDumpTrigger=true"
+    ]
+  }
   outputs.file(compileTestGroovyExec)
 }
