Removed support for releases of Tapestry earlier than 5.7.2

--- a/spock-tapestry/tapestry.gradle
+++ b/spock-tapestry/tapestry.gradle
@@ -4,25 +4,15 @@ ext.displayName = "Spock Framework - Tapestry Module"
 
 description = "Spock's Tapestry Module provides support for testing Tapestry 5 based applications."
 
-def tapestryVersion57 = "5.7.2"
-
-def useTapestry57 = javaVersion >= 1.8
-
-def tapestryVersionTest = useTapestry57 ? tapestryVersion57 : "5.2.6"
+def tapestryVersion = "5.7.2"
 
 dependencies {
   compile project(":spock-core")
-  compile "org.apache.tapestry:tapestry-ioc:$tapestryVersion57", provided
+  compile "org.apache.tapestry:tapestry-ioc:$tapestryVersion", provided
 
   testCompile "javax.inject:javax.inject:1"
-  testRuntime ("org.apache.tapestry:tapestry-ioc:$tapestryVersionTest"){
+  testRuntime ("org.apache.tapestry:tapestry-ioc:$tapestryVersion"){
     force = true
-  }
-}
-
-if (!useTapestry57) {
-  tasks.withType(Test) {
-    exclude '**/*WithImportModule.class'
   }
 }
 
