Simplify release workflow
Remove build avoidance, as we now have build-caching with gradle enterprise the build on the tag should be fast.
Disable tagging and pushing for the time being as the automatic GITHUB_TOKEN won't trigger workflows,
for now we will use manual tags.

fixes #1304

--- a/build.gradle
+++ b/build.gradle
@@ -269,9 +269,10 @@ if (gradle.startParameter.taskNames == ["ghActionsPublish"] || gradle.startParam
      */
     if (snapshotVersion || isTag) {
       gradle.startParameter.taskNames += ["publish"]
-    } else {
-      gradle.startParameter.taskNames += ["tagRelease"]
-    }
+    } // else {
+      // disable tag release for now as this is done with a token, that doesn't trigger other workflows
+      // gradle.startParameter.taskNames += ["tagRelease"]
+      // }
   }
 
   if (originalStartParameterTaskNames == ["ghActionsDocs"] && (snapshotVersion || isTag)) {
