--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ plugins {
 description = "Spock Framework"
 
 ext {
-  baseVersion = "2.0"
-  snapshotVersion = false
+  baseVersion = "2.1"
+  snapshotVersion = true
   milestone = 0
   variants = [2.5, 3.0]
   variant = System.getProperty("variant") as BigDecimal ?: variants.first()
